force-app/main/default/objects/KMDC__c/KMDC__c.object-meta.xml
<CustomObject>
    <description>Objet utilisé pour les tableaux Einstein</description>
    <label>KMDC</label>
    <nameField>
        <label>Nom de KMDC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KMDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>