force-app/main/default/objects/KMDC__c/fields/actifParOrigine__c.field-meta.xml
<CustomField>
    <fullName>actifParOrigine__c</fullName>
    <formula>OR(
origine__c = &apos;BAL VENDEUR&apos;,
origine__c = &apos;PORTE A PORTE VENDEUR&apos;,
origine__c = &apos;TELEPHONE VENDEUR&apos;,
origine__c = &apos;RELANCE KUBE&apos;,
origine__c = &apos;COMPLEMENT VENDEUR&apos;,
origine__c = &apos;PARRAINAGE VENDEUR&apos;,
origine__c = &apos;STAND GM&apos;,
origine__c = &apos;FOIRE&apos;,
origine__c = &apos;STAND MARCHE VENDEUR&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actif par origine</label>
    <type>Checkbox</type>
</CustomField>