force-app/main/default/objects/KMDC__c/fields/assignedClosing__c.field-meta.xml
<CustomField>
    <fullName>assignedClosing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clôture associée</label>
    <referenceTo>CustomClosing__c</referenceTo>
    <relationshipLabel>KMDC</relationshipLabel>
    <relationshipName>KMDCs</relationshipName>
    <type>Lookup</type>
</CustomField>