force-app/main/default/objects/KMDC__c/fields/codeFinancement__c.field-meta.xml
<CustomField>
    <fullName>codeFinancement__c</fullName>
    <label>Code financement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>