force-app/main/default/objects/KMDC__c/fields/codeOrigine__c.field-meta.xml
<CustomField>
    <fullName>codeOrigine__c</fullName>
    <label>Code origine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>