force-app/main/default/objects/KMDC__c/fields/customerOrder__c.field-meta.xml
<CustomField>
    <fullName>customerOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande client</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>KMDC</relationshipLabel>
    <relationshipName>KMDC</relationshipName>
    <type>Lookup</type>
</CustomField>