force-app/main/default/objects/KMDC__c/fields/dateCommande__c.field-meta.xml
<CustomField>
    <fullName>dateCommande__c</fullName>
    <label>Date commande</label>
    <type>Date</type>
</CustomField>