force-app/main/default/objects/KMDC__c/fields/dateMetrage__c.field-meta.xml
<CustomField>
    <fullName>dateMetrage__c</fullName>
    <label>Date métrage</label>
    <type>Date</type>
</CustomField>