force-app/main/default/objects/KMDC__c/fields/dateStats__c.field-meta.xml
<CustomField>
    <fullName>dateStats__c</fullName>
    <label>Date stats</label>
    <type>Date</type>
</CustomField>