force-app/main/default/objects/KMDC__c/fields/dateVente__c.field-meta.xml
<CustomField>
    <fullName>dateVente__c</fullName>
    <label>Date vente</label>
    <type>Date</type>
</CustomField>