force-app/main/default/objects/KMDC__c/fields/devis__c.field-meta.xml
<CustomField>
    <fullName>devis__c</fullName>
    <label>Devis</label>
    <length>18</length>
    <type>Text</type>
</CustomField>