force-app/main/default/objects/KMDC__c/fields/DRvendeur__c.field-meta.xml
<CustomField>
    <fullName>DRvendeur__c</fullName>
    <label>DR vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>