force-app/main/default/objects/KMDC__c/fields/DSChantier__c.field-meta.xml
<CustomField>
    <fullName>DSChantier__c</fullName>
    <label>DS chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>