force-app/main/default/objects/KMDC__c/fields/DVChantier__c.field-meta.xml
<CustomField>
    <fullName>DVChantier__c</fullName>
    <label>DV chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>