force-app/main/default/objects/KMDC__c/fields/DVVendeur__c.field-meta.xml
<CustomField>
    <fullName>DVVendeur__c</fullName>
    <label>DV vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>