force-app/main/default/objects/KMDC__c/fields/ECS_HT__c.field-meta.xml
<CustomField>
    <fullName>ECS_HT__c</fullName>
    <label>ECS (HT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>