force-app/main/default/objects/KMDC__c/fields/ECS_Taux__c.field-meta.xml
<CustomField>
    <fullName>ECS_Taux__c</fullName>
    <label>ECS (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>