force-app/main/default/objects/KMDC__c/fields/ECS_TTC__c.field-meta.xml
<CustomField>
    <fullName>ECS_TTC__c</fullName>
    <label>ECS (TTC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>