force-app/main/default/objects/KMDC__c/fields/financement__c.field-meta.xml
<CustomField>
    <fullName>financement__c</fullName>
    <label>Financement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>