force-app/main/default/objects/KMDC__c/fields/IDTiers__c.field-meta.xml
<CustomField>
    <fullName>IDTiers__c</fullName>
    <externalId>true</externalId>
    <label>IDTiers</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>