force-app/main/default/objects/KMDC__c/fields/magasinChantier__c.field-meta.xml
<CustomField>
    <fullName>magasinChantier__c</fullName>
    <label>Magasin chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>