force-app/main/default/objects/KMDC__c/fields/magasinVendeur__c.field-meta.xml
<CustomField>
    <fullName>magasinVendeur__c</fullName>
    <label>Magasin vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>