force-app/main/default/objects/KMDC__c/fields/matriculeMetreur__c.field-meta.xml
<CustomField>
    <fullName>matriculeMetreur__c</fullName>
    <label>Métreur (Matricule)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>