force-app/main/default/objects/KMDC__c/fields/metreur__c.field-meta.xml
<CustomField>
    <fullName>metreur__c</fullName>
    <label>Métreur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>