force-app/main/default/objects/KMDC__c/fields/montantHT__c.field-meta.xml
<CustomField>
    <fullName>montantHT__c</fullName>
    <label>Montant (HT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>