force-app/main/default/objects/KMDC__c/fields/nombreMenuiseries__c.field-meta.xml
<CustomField>
    <fullName>nombreMenuiseries__c</fullName>
    <label>Nombre menuiseries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>