force-app/main/default/objects/KMDC__c/fields/nomDepotChantier__c.field-meta.xml
<CustomField>
    <fullName>nomDepotChantier__c</fullName>
    <label>Nom dépôt chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>