force-app/main/default/objects/KMDC__c/fields/nomDRServiceChantier__c.field-meta.xml
<CustomField>
    <fullName>nomDRServiceChantier__c</fullName>
    <label>Nom DR service chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>