force-app/main/default/objects/KMDC__c/fields/nomDRvendeur__c.field-meta.xml
<CustomField>
    <fullName>nomDRvendeur__c</fullName>
    <label>DR vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>