force-app/main/default/objects/KMDC__c/fields/nomDRVenteChantier__c.field-meta.xml
<CustomField>
    <fullName>nomDRVenteChantier__c</fullName>
    <label>DR vente chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>