force-app/main/default/objects/KMDC__c/fields/nomDSChantier__c.field-meta.xml
<CustomField>
    <fullName>nomDSChantier__c</fullName>
    <label>Nom DS chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>