force-app/main/default/objects/KMDC__c/fields/nomDVChantier__c.field-meta.xml
<CustomField>
    <fullName>nomDVChantier__c</fullName>
    <label>Nom DV chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>