force-app/main/default/objects/KMDC__c/fields/nomDVVendeur__c.field-meta.xml
<CustomField>
    <fullName>nomDVVendeur__c</fullName>
    <label>Nom DV vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>