force-app/main/default/objects/KMDC__c/fields/nomMagasinChantier__c.field-meta.xml
<CustomField>
    <fullName>nomMagasinChantier__c</fullName>
    <label>Nom magasin chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>