force-app/main/default/objects/KMDC__c/fields/nomMagasinVendeur__c.field-meta.xml
<CustomField>
    <fullName>nomMagasinVendeur__c</fullName>
    <label>Nom magasin vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>