force-app/main/default/objects/KMDC__c/fields/numeroMDC__c.field-meta.xml
<CustomField>
    <fullName>numeroMDC__c</fullName>
    <label>N° MDC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>