force-app/main/default/objects/KMDC__c/fields/numeroProjet__c.field-meta.xml
<CustomField>
    <fullName>numeroProjet__c</fullName>
    <formula>customerOrder__r.Opportunity.numeroProjet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projet</label>
    <type>Text</type>
</CustomField>