force-app/main/default/objects/KMDC__c/fields/origine__c.field-meta.xml
<CustomField>
    <fullName>origine__c</fullName>
    <label>Origine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>