force-app/main/default/objects/KMDC__c/fields/SGID__c.field-meta.xml
<CustomField>
    <fullName>SGID__c</fullName>
    <externalId>true</externalId>
    <label>Vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>