force-app/main/default/objects/KMDC__c/fields/statisticalMonth__c.field-meta.xml
<CustomField>
    <fullName>statisticalMonth__c</fullName>
    <formula>assignedClosing__r.month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois (Stats)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>