force-app/main/default/objects/KMDC__c/fields/statisticalQuarter__c.field-meta.xml
<CustomField>
    <fullName>statisticalQuarter__c</fullName>
    <formula>assignedClosing__r.quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trimestre (Stats)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>