force-app/main/default/objects/KMDC__c/fields/statisticalWOM__c.field-meta.xml
<CustomField>
    <fullName>statisticalWOM__c</fullName>
    <formula>assignedClosing__r.weekOfMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semaine mois (Stats)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>