force-app/main/default/objects/KMDC__c/fields/statisticalWOY__c.field-meta.xml
<CustomField>
    <fullName>statisticalWOY__c</fullName>
    <formula>assignedClosing__r.weekOfYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semaine année (Stats)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>