force-app/main/default/objects/KMDC__c/fields/statisticalYear__c.field-meta.xml
<CustomField>
    <fullName>statisticalYear__c</fullName>
    <formula>assignedClosing__r.year__c</formula>
    <label>Année (Stats)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>