force-app/main/default/objects/KMDC__c/fields/suppliedBy__c.field-meta.xml
<CustomField>
    <fullName>suppliedBy__c</fullName>
    <description>Champ permettant de savoir si le KMDC a été généré par le processus développer ou bien de manière manuelle.</description>
    <label>Alimenté par</label>
    <length>255</length>
    <type>Text</type>
</CustomField>