force-app/main/default/objects/KMDC__c/fields/teleacteur__c.field-meta.xml
<CustomField>
    <fullName>teleacteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teleacteur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KMDC</relationshipName>
    <type>Lookup</type>
</CustomField>