force-app/main/default/objects/KMDC__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Création</fullName>
            </value>
            <value>
                <fullName>Majoration</fullName>
            </value>
            <value>
                <fullName>Minoration</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Recréditation</fullName>
            </value>
            <value>
                <fullName>Variation HT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>