force-app/main/default/objects/KMDC__c/fields/typeSignature__c.field-meta.xml
<CustomField>
    <fullName>typeSignature__c</fullName>
    <label>Type de signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manuel</fullName>
            </value>
            <value>
                <fullName>Electronique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>