force-app/main/default/objects/KMDC__c/fields/vendeur__c.field-meta.xml
<CustomField>
    <fullName>vendeur__c</fullName>
    <label>Vendeur (Matricule)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>