force-app/main/default/objects/KMDC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>codeContrat__c</columns>
    <columns>IDTiers__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>nomDepotChantier__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>type__c</columns>
    <columns>financement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024 10:25 AM</value>
    </filters>
    <label>Tout</label>
</ListView>