force-app/main/default/objects/KMDC__c/listViews/TEST.listView-meta.xml
<ListView>
    <fullName>TEST</fullName>
    <columns>NAME</columns>
    <columns>codeContrat__c</columns>
    <columns>dateVente__c</columns>
    <columns>IDTiers__c</columns>
    <columns>numeroMDC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>codeContrat__c</field>
        <operation>equals</operation>
        <value>CNT/0657060522</value>
    </filters>
    <label>TEST</label>
    <language>fr</language>
</ListView>