force-app/main/default/objects/KMDC__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>codeContrat__c</columns>
    <columns>dateVente__c</columns>
    <columns>IDTiers__c</columns>
    <columns>numeroMDC__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>